# ghetto_omr_cpp

./: CMakeLists.txt  README.md  style1.css  timeline  timeline1
concepts/: step 2.xcf
src/: CMakeLists.txt  data.cpp  data.h  gui_main.cpp  gui_main.h  gui_window.cpp  gui_window.h  main.cpp
src/data/: CMakeLists.txt  coords_data.cpp  coords_data.h  data.cpp  data.h  marker_data.cpp  marker_data.h  mcq_data.cpp  mcq_data.h  numerical_data.cpp  numerical_data.h  selection_data.cpp  selection_data.h
src/functions/: CMakeLists.txt  functions.cpp  functions.h
src/mainbox/: CMakeLists.txt  mainbox.cpp  mainbox.h  stepbox.cpp  stepbox.h
src/mainbox/contents/: CMakeLists.txt  content1.cpp  content2.cpp  content2.h  content3.cpp  content4.cpp  contents.h
src/mainbox/contents/content2/: CMakeLists.txt  content2_imgbox.cpp  content2_imgbox.h  img_area.cpp  img_area.h  imgbox.cpp  imgbox.h  worktools.cpp  worktools.h
src/mainbox/contents/content2/dialog/: CMakeLists.txt  _dialog_qn.cpp  _dialog_qn.h  dialog.cpp  dialog.h  marker_class.cpp  marker_class.h  mcq_class.cpp  mcq_class.h  numerical_class.cpp  numerical_class.h
src/mainbox/contents/content2/image/: CMakeLists.txt  bottombar.cpp  bottombar.h  img_area.cpp  img_area.h  img_border_box.cpp  img_border_box.h  img_scrollable.cpp  img_scrollable.h
src/mainbox/contents/content2/layer/: CMakeLists.txt  CellRenderer_isVisible.cpp  CellRenderer_isVisible.h  LayerBox.cpp  LayerBox.h  LayerListScrollable.cpp  LayerListScrollable.h  LayerTools.cpp  LayerTools.h
src/mainbox/contents/content2/tools/: CMakeLists.txt  layerbox.cpp  layerbox.h  worktools.cpp  worktools.h
src/startup/: CMakeLists.txt  startup.cpp  startup.h
